# yousnoozeyoulose

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_cmux_client.py  test_config.py  test_daemon.py  test_detectors.py  test_scheduler.py  test_webui.py
ysyl/: __init__.py  __main__.py  cli.py  cmux_client.py  config.py  daemon.py  detectors.py  models.py  scheduler.py  webui.py
