[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ysyl"
description = "YouSnoozeYouLose — a daemon that detects Claude and Kimi rate-limit blocks in cmux surfaces and resumes them when the quota refreshes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Emerson Yu" },
]
keywords = ["cmux", "claude", "kimi", "rate-limit", "daemon", "automation", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/emersony99/yousnoozeyoulose"
Repository = "https://github.com/emersony99/yousnoozeyoulose"
Issues = "https://github.com/emersony99/yousnoozeyoulose/issues"

[project.scripts]
ysyl = "ysyl.cli:main"

[tool.hatch.version]
path = "ysyl/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ysyl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
